force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_OutstandingAR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OutstandingAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as a part of story to handle/store value of Outstanding AR for any Quote.</description>
    <label>Outstanding AR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Outstanding AR)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>