force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PackageType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PackageType__c</fullName>
    <description>This field captures the package type for the product associated. This US GCPM 1064</description>
    <label>Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_PackagingType</valueSetName>
    </valueSet>
</CustomField>