force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Packaging__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Packaging__c</fullName>
    <label>Packaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>