force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PackType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PackType__c</fullName>
    <description>This field captures the Pack type of the product associated. As per the US GCPM 1064</description>
    <label>Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>