force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ParentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ParentTransactionId__c</fullName>
    <description>This field will be populated with the value of Parent Quote Number when the Contract is Amended.</description>
    <label>Parent Transaction Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>