force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PaymentTermBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTermBackend__c</fullName>
    <description>This field is used in backend to trigger CPQ calculations if payment terms  is changed from quote detail page.</description>
    <formula>Text( SBQQ__PaymentTerms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Backend</label>
    <type>Text</type>
</CustomField>