force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PaymentTermsApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTermsApprovalRequired__c</fullName>
    <formula>IF( ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;) , TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c), TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) &amp; &apos;,&apos;)</formula>
    <label>Payment Terms Approval Required</label>
    <type>Text</type>
</CustomField>