force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PaymentTermsRuleIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTermsRuleIndicator__c</fullName>
    <formula>IF(AND( ISPICKVAL( PMC_CPQ_Region__c , &apos;North America&apos;), Text(SBQQ__PaymentTerms__c) &lt;&gt; TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) , TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) &lt;&gt; &apos;Prepayment&apos; ,Text(SBQQ__PaymentTerms__c) &lt;&gt; &apos;Prepayment&apos; ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Rule Indicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>