force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PhysicalForm__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PhysicalForm__c</fullName>
    <description>To hold the information of the physical form</description>
    <label>Physical Form</label>
    <type>TextArea</type>
</CustomField>