force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PO__c</fullName>
    <description>This field captures the unique Purchase order #</description>
    <inlineHelpText>Enter the unique identification code assigned to this purchase order.</inlineHelpText>
    <label>Customer Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>