force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PotashBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PotashBusinessType__c</fullName>
    <formula>IF( TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Potash&quot;,TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) ),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potash Business type</label>
    <type>Text</type>
</CustomField>