force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PresentedStatusDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PresentedStatusDuration__c</fullName>
    <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Presented&quot;) &amp;&amp; NOT( ISBLANK( PMC_CPQ_QuoteInPresentedStatusTime__c ) ) , TEXT(ROUND(  PMC_CPQ_PriorPresentedStatusDuration__c +((NOW() - PMC_CPQ_QuoteInPresentedStatusTime__c)*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorPresentedStatusDuration__c ) &amp;&apos; Hours&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presented Status Duration</label>
    <type>Text</type>
</CustomField>