force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PreviousListPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PreviousListPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous List Price</label>
    <type>Checkbox</type>
</CustomField>