force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriceByDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceByDate__c</fullName>
    <description>This field is created  to check price by date</description>
    <label>Price By Date</label>
    <type>Date</type>
</CustomField>