force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriceCheckQuote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceCheckQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as part of User Story to check whether this quote is a Price Check Quote</description>
    <label>Price Check Quote</label>
    <type>Checkbox</type>
</CustomField>