force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriceListDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceListDate__c</fullName>
    <description>This field will be used to store the date in which the price will be listed.</description>
    <label>Price List Date</label>
    <type>Date</type>
</CustomField>