force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriceValidityDiffrence__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceValidityDiffrence__c</fullName>
    <label>Price Validity Diffrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>