force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriceValidityDiffrenceError__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceValidityDiffrenceError__c</fullName>
    <label>Price Validity Diffrence Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>