force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PrimaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PrimaryBusinessType__c</fullName>
    <description>This field is to extract business type from Primary Business Type in Quote to use filter on Add product selection page</description>
    <formula>IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;International&quot;,&quot;&quot;, IF(
ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;) ,
IF( RecordType.DeveloperName =&apos;PMC_CPQ_International&apos;,&apos;&apos;,
IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;Industrial&quot;,&quot;&quot;,
IF( or(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;Co-Products&apos; ,TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;Raw Material&apos;),&apos;Co-Product&apos;,
TEXT(PMC_CPQ_QuoteRecordSubType__c))
)
) ,
IF( OR(TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Potash&quot;,
TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Paraguay&quot;),&quot;&quot;,
if(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;B2B_Specialities&apos;,&apos;Co-Product&apos;,TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Business Type Extractor</label>
    <type>Text</type>
</CustomField>