force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to capture the Primary Contact associated with the quote.</description>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CPQ Quotes (Primary Contact1)</relationshipLabel>
    <relationshipName>CPQ_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>