force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_PriorPresentedStatusDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriorPresentedStatusDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prior Presented Status Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>