force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product__c</fullName>
    <description>Field to store product information</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>