force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductClassFilter__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductClassFilter__c</fullName>
    <description>Used in Search filter for international record type</description>
    <formula>IF(  RecordType.DeveloperName =&apos;PMC_CPQ_International&apos; &amp;&amp; ISPICKVAL( PMC_CPQ_Region__c ,&apos;North America&apos;) ,&apos;Commodity&apos; ,&apos;&apos;)</formula>
    <label>Product Class Filter</label>
    <type>Text</type>
</CustomField>