force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductComments__c</fullName>
    <description>This field is created as a part of story to handle/store value of Product Comments for any Quote.</description>
    <label>Product Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>