force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductFamilyBlendFilter__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductFamilyBlendFilter__c</fullName>
    <formula>IF(ISPICKVAL( PMC_CPQ_Region__c ,&apos;North America&apos;) &amp;&amp; TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Feed&apos; ||TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Fertilizer&apos; || TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Co-Products&apos; ,&apos;BLENDS&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Blend Filter</label>
    <type>Text</type>
</CustomField>