force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductFamilyFilter__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductFamilyFilter__c</fullName>
    <description>used in search filter on product configuration page</description>
    <formula>IF(  RecordType.DeveloperName =&apos;PMC_CPQ_International&apos; &amp;&amp; ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;),&apos;DAP-MAP&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Filter</label>
    <type>Text</type>
</CustomField>