force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductGroup__c</fullName>
    <label>Product Group</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>