force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field captures the Location of the product.This is as per the  US GCPM 1064</description>
    <label>Product Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Origin Location</value>
        </filterItems>
        <infoMessage>Select Product Location Columns Link to add appropriate Locations</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>CPQ Quotes</relationshipLabel>
    <relationshipName>CPQ_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>