force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QLEURL__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QLEURL__c</fullName>
    <label>QLE URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>