force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>