force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuantityChangedCount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuantityChangedCount__c</fullName>
    <description>This field will track count of QLE&apos;s where quantity is changed.</description>
    <label>Quantity Changed Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.PMC_CPQ_IsQuantityUpdated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>