force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuantityQuality__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuantityQuality__c</fullName>
    <label>Quantity &amp; Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Draft survey / No Hold cleanliness</fullName>
            </value>
            <value>
                <fullName>Draft survey / No Hold Cleanliness</fullName>
            </value>
            <value>
                <fullName>Draft survey / Hold Cleanliness</fullName>
            </value>
            <value>
                <fullName>Draft survey / Hold Cleanliness / No Release</fullName>
            </value>
            <value>
                <fullName>Railcar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>