force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuantityQualityTerms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuantityQualityTerms__c</fullName>
    <label>Quantity &amp; Quality Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>