force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteApproved__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify already approved quote via approval process</description>
    <label>Quote Approved</label>
    <type>Checkbox</type>
</CustomField>