force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteCreationTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteCreationTime__c</fullName>
    <description>This field captures the time Quote has been created</description>
    <formula>TIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the Time this quote has been created</inlineHelpText>
    <label>Quote Creation Time</label>
    <type>Time</type>
</CustomField>