force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteInApprovedStatusTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteInApprovedStatusTime__c</fullName>
    <label>Quote In Approved Status Time</label>
    <type>DateTime</type>
</CustomField>