force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteInPresentedStatusTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteInPresentedStatusTime__c</fullName>
    <label>Quote In Presented Status time</label>
    <type>DateTime</type>
</CustomField>