force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteInRequestStatusTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteInRequestStatusTime__c</fullName>
    <label>Quote In Request Status Time</label>
    <type>DateTime</type>
</CustomField>