force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteNumberIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteNumberIdentifier__c</fullName>
    <description>This field will store the quote number with prefix removed which will serve as an external id for integration.</description>
    <externalId>true</externalId>
    <label>Quote Number Identifier</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>