force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteOrigin__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteOrigin__c</fullName>
    <description>If the Quote is inserted by DH User and the Stage is Request, then the value is &quot;DH Request&quot;, if not the value shall be blank.</description>
    <inlineHelpText>Indicates if this originated from Mosaic Direct or not</inlineHelpText>
    <label>Quote Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>