force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteOwnerRole__c</fullName>
    <label>Quote Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>