force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteRecordSubType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
    <description>This field is used to capture the record type for the Quote</description>
    <inlineHelpText>Business area Segmentation.</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Co-Products</fullName>
            </value>
            <value>
                <fullName>B2B - Specialties</fullName>
            </value>
            <value>
                <fullName>B2C - Fertilizer</fullName>
            </value>
            <value>
                <fullName>B2B - Feed</fullName>
            </value>
            <value>
                <fullName>B2B - Fertilizer</fullName>
            </value>
            <value>
                <fullName>B2C - Paraguay</fullName>
            </value>
            <value>
                <fullName>B2B - Potash</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
                <isActive>false</isActive>
                <label>Distribution</label>
            </value>
            <value>
                <fullName>Paraguay</fullName>
                <isActive>false</isActive>
                <label>Paraguay</label>
            </value>
            <value>
                <fullName>Potash</fullName>
                <isActive>false</isActive>
                <label>Potash</label>
            </value>
            <value>
                <fullName>Potassio</fullName>
                <isActive>false</isActive>
                <label>Potassio</label>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
                <isActive>false</isActive>
                <label>Raw Materials</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>