force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteSavedFromQLE__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteSavedFromQLE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to find whether the Save happened from inside QLE or not. If checked, the Save was from QLE.</description>
    <inlineHelpText>Indicates Save happened from inside QLE or not. If checked, the Save was from QLE.</inlineHelpText>
    <label>Quote Saved From QLE</label>
    <type>Checkbox</type>
</CustomField>