force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_QuoteShortNameDescription__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteShortNameDescription__c</fullName>
    <description>Based on the stanadardized Quote description across all quotes</description>
    <label>Quote Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>