force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RailCarTermsConditions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RailCarTermsConditions__c</fullName>
    <label>Rail Car Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>