force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RailShipmentPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RailShipmentPeriodEnd__c</fullName>
    <label>Rail Shipment Period End</label>
    <type>Date</type>
</CustomField>