force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RailShipmentPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RailShipmentPeriodStart__c</fullName>
    <description>Field to hold Rail Shipment Start date</description>
    <label>Rail Shipment Period Start</label>
    <type>Date</type>
</CustomField>