force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterial10SoldCFR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterial10SoldCFR__c</fullName>
    <label>Raw Material 10 Average Sold CFR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>