force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterial1ListCFR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterial1ListCFR__c</fullName>
    <description>This field is for Raw Material 1 List CFR</description>
    <label>Raw Material 1 Average List CFR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>