force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterialName10__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterialName10__c</fullName>
    <label>Raw Material 10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>