force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterialName1__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterialName1__c</fullName>
    <label>Raw Material 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>