force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterialName2__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterialName2__c</fullName>
    <label>Raw Material 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>