force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RawMaterialQuantity10__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RawMaterialQuantity10__c</fullName>
    <label>Raw Material 10 Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>