force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RecordLocked__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RecordLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>