force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>