force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Region__c</fullName>
    <description>Set region based on Account Manager/SSR</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_Region</valueSetName>
    </valueSet>
</CustomField>