force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RegionStructuralGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RegionStructuralGroup__c</fullName>
    <label>Region Structural Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>