force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RejectedReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RejectedReason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_RejectedReasons</valueSetName>
    </valueSet>
</CustomField>