force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RejectionReason__c</fullName>
    <description>This field is created as a part of story to handle/store value of Rejection Reason for any Quote.</description>
    <inlineHelpText>Reason for which the Quote was rejected</inlineHelpText>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>