force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RemittanceRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RemittanceRegion__c</fullName>
    <inlineHelpText>Field to hold Remittance Region</inlineHelpText>
    <label>Remittance Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>