force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RequestedExpirationDateNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedExpirationDateNumber__c</fullName>
    <formula>UNIXTIMESTAMP( PMC_CPQ_RequestedExpirationDateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Expiration Date Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>