force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RequestedExpirationDateTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedExpirationDateTime__c</fullName>
    <label>Requested Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>