force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_RequestStatusDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestStatusDuration__c</fullName>
    <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Request&quot;) &amp;&amp; NOT( ISBLANK( PMC_CPQ_QuoteInRequestStatusTime__c  ) ) , TEXT(ROUND(  PMC_CPQ_PriorRequestStatusDuration__c  +((NOW() - PMC_CPQ_QuoteInRequestStatusTime__c )*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorRequestStatusDuration__c  ) &amp;&apos; Hours&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Status Duration</label>
    <type>Text</type>
</CustomField>